fixed scrolling issue in document info screen

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -46,5 +46,8 @@
     "Delete all Pages":"Alle Seiten löschen",
     "This is a": "Dies ist ein",
     "with":"mit",
-    "pages":"Seite/n"
+    "pages":"Seite/n",
+
+    "Go Back": "Zurückgehen",
+    "Finished submitting claim, please close the app":"Fertig mit dem Einreichen des Anspruchs, bitte schließen Sie die App"
 }
