--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -46,5 +46,7 @@
     
     "This is a": "This is a",
     "with":"with",
-    "pages": "page/s"
+    "pages": "page/s",
+    "Go Back": "Go Back",
+    "Finished submitting claim, please close the app":"Finished submitting claim, please close the app"
 }
