did some new styling

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -1,6 +1,5 @@
 {
   "Insurance Number": "Versicherungsnummer",
-  "Please select your sex": "Bitte wählen Sie Ihr Geschlecht",
   "Select": "Wählen...",
   "Male": "Männlich",
   "Female": "Weiblich",
@@ -48,5 +47,6 @@
   "pages": "Seite/n",
 
   "Go Back": "Zurückgehen",
-  "Finished submitting claim, please close the app": "Fertig mit dem Einreichen des Anspruchs, bitte schließen Sie die App"
+  "Finished submitting claim, please close the app": "Fertig mit dem Einreichen des Anspruchs, bitte schließen Sie die App",
+ "Select policy holder's sex":"Wählen Sie das Geschlecht des Versicherungsnehmers"
 }
