--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -11,7 +11,7 @@
   "Please select your gender": "Please select your gender",
   "Please enter your name": "Please enter your name",
 
-  "Scan a new Document": "Scan a new Document",
+  "Scan Document": "Scan Document",
   "Send": "Send...",
   "was entered incorrectly Please fix your entry and try again": "was entered incorrectly. Please fix your entry and try again",
   "Cannot send anything before you scan some documents": "Cannot send anything before you scan some documents!",
@@ -48,5 +48,6 @@
   "with": "with",
   "pages": "page/s",
   "Go Back": "Go Back",
-  "Finished submitting claim, please close the app": "Finished submitting claim, please close the app"
+  "Finished submitting claim, please close the app": "Finished submitting claim, please close the app",
+  "Select policy holder's sex":"Select policy holder's sex"
 }
