--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -10,7 +10,6 @@
   "Please select your gender": "Bitte wählen Sie Ihr Geschlecht",
   "Please enter your name": "Bitte geben Sie Ihren Namen ein",
 
-  "Scan a new Document": "Ein neues Dokument scannen",
   "Send": "Senden...",
   "was entered incorrectly Please fix your entry and try again": "wurde falsch eingegeben. Bitte korrigieren Sie Ihre Eingabe und versuchen Sie es erneut",
   "Something went wrong sending claim Please try again": "Beim Senden des Dokuments ist etwas schief gegangen. Bitte versuchen Sie es erneut",
@@ -48,5 +47,6 @@
 
   "Go Back": "Zurückgehen",
   "Finished submitting claim, please close the app": "Fertig mit dem Einreichen des Anspruchs, bitte schließen Sie die App",
- "Select policy holder's sex":"Wählen Sie das Geschlecht des Versicherungsnehmers"
+ "Select policy holder's sex":"Wählen Sie das Geschlecht des Versicherungsnehmers",
+ "Scan Document":"Dokument scannen"
 }
