--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -5,7 +5,7 @@
   "Male": "Male",
   "Female": "Female",
   "First Name": "First Name",
-  "Surname": "Surname",
+  "Last name": "Last name",
   "Continue": "Continue...",
   "Please check your insurance number": "Please check your insurance number",
   "Please select your gender": "Please select your gender",
@@ -49,5 +49,7 @@
   "pages": "page/s",
   "Go Back": "Go Back",
   "Finished submitting claim, please close the app": "Finished submitting claim, please close the app",
-  "Select policy holder's sex":"Select policy holder's sex"
+  "Select policy holder's sex":"Select policy holder's sex",
+  "Finished submitting claim":"Finished submitting claim",
+  "Please wait while we send your claim":"Please wait while we send your claim..."
 }
