fixed issue with embedding image to pdf

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -46,7 +46,7 @@
   "pages": "Seite/n",
 
   "Go Back": "Zurückgehen",
-  "Finished submitting claim, please close the app": "Fertig mit dem Einreichen des Anspruchs, bitte schließen Sie die App",
+  "Finished submitting claim": "Fertig mit dem Einreichen des Anspruchs",
  "Select policy holder's sex":"Wählen Sie das Geschlecht des Versicherungsnehmers",
  "Scan Document":"Dokument scannen",
  "Please wait while we send your claim":"Bitte warten Sie, während wir Ihren Antrag abschicken..."
