--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -51,5 +51,6 @@
   "Finished submitting claim, please close the app": "Finished submitting claim, please close the app",
   "Select policy holder's sex":"Select policy holder's sex",
   "Finished submitting claim":"Finished submitting claim",
-  "Please wait while we send your claim":"Please wait while we send your claim..."
+  "Please wait while we send your claim":"Please wait while we send your claim...",
+  "Set language": "Set language"
 }
