--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -52,5 +52,6 @@
   "Select policy holder's sex":"Select policy holder's sex",
   "Finished submitting claim":"Finished submitting claim",
   "Please wait while we send your claim":"Please wait while we send your claim...",
-  "Set language": "Set language"
+  "Set language": "Set language",
+  "Please enter a valid birth date": "Please enter a valid birth date"
 }
