made three tabs for start tabs and made language setting be a local variable rather than global

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -52,5 +52,5 @@
  "Please wait while we send your claim":"Bitte warten Sie, während wir Ihren Antrag abschicken...",
  "Language":"Sprache",
  "Set language" : "Sprache einstellen",
- "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein"
+ "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein",
 }
