fixed issue with start screen translate and go back

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -53,4 +53,6 @@
  "Language":"Sprache",
  "Set language" : "Sprache einstellen",
  "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein",
+ "Press these": "Drücken Sie diese",
+ "icons for instructions": "Icons für Anweisungen"
 }
