--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -53,5 +53,8 @@
   "Finished submitting claim":"Finished submitting claim",
   "Please wait while we send your claim":"Please wait while we send your claim...",
   "Set language": "Set language",
-  "Please enter a valid birth date": "Please enter a valid birth date"
+  "Please enter a valid birth date": "Please enter a valid birth date",
+  "Press these": "Press these",
+  "icons for instructions": "icons for instructions"
+
 }
