moved language set up to navigator component, styled bottom bars for imprint and privacy information

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -54,5 +54,8 @@
  "Set language" : "Sprache einstellen",
  "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein",
  "Press these": "Drücken Sie diese",
- "icons for instructions": "Icons für Anweisungen"
+ "icons for instructions": "Icons für Anweisungen",
+ "Start": "Start",
+ "Imprint":"Impressum",
+ "Privacy": "Datenschutz"
 }
