--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -55,6 +55,9 @@
   "Set language": "Set language",
   "Please enter a valid birth date": "Please enter a valid birth date",
   "Press these": "Press these",
-  "icons for instructions": "icons for instructions"
+  "icons for instructions": "icons for instructions",
+  "Start":"Start",
+  "Imprint":"Imprint",
+  "Privacy":"Privacy"
 
 }
