added info icon to image crop

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -57,5 +57,6 @@
  "icons for instructions": "Icons für Anweisungen",
  "Start": "Start",
  "Imprint":"Impressum",
- "Privacy": "Datenschutz"
+ "Privacy": "Datenschutz",
+ "Please enter the information of the policy holder below": "Bitte geben Sie die Informationen des Versicherungsnehmers unten ein"
 }
