--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -58,6 +58,7 @@
   "icons for instructions": "icons for instructions",
   "Start":"Start",
   "Imprint":"Imprint",
-  "Privacy":"Privacy"
+  "Privacy":"Privacy",
+  "Please enter the information of the policy holder below":"Please enter the information of the policy holder below"
 
 }
