fixed cut letters and send reverts language

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -53,7 +53,7 @@
  "Language":"Sprache",
  "Set language" : "Sprache einstellen",
  "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein",
- "Press these": "Drücken Sie diese",
+ "Press these": "Durch Drücken auf das Symbol",
  "icons for instructions": "Icons für Anweisungen",
  "Start": "Start",
  "Imprint":"Impressum",
