implemented document of requests given by elisabeth

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -1,13 +1,13 @@
 {
   "Insurance Number": "Versicherungsnummer",
   "Select": "Wählen...",
-  "Male": "Männlich",
-  "Female": "Weiblich",
+  "Mr": "Herr",
+  "Ms": "Frau",
   "First Name": "Vorname",
   "Last name": "Nachname",
   "Please check your insurance number": "Bitte überprüfen Sie Ihre Versicherungsnummer",
   "Continue": "Weiter...",
-  "Please select your gender": "Bitte wählen Sie Ihr Geschlecht",
+  "Salutation": "Anrede",
   "Please enter your name": "Bitte geben Sie Ihren Namen ein",
 
   "Send": "Senden...",
@@ -19,15 +19,16 @@
   "Please enter the birthdate of the insured person": "Bitte geben Sie das Geburtsdatum der versicherten Person ein:",
   "Which type of document are you about to scan": "Welche Art von Dokument wollen Sie scannen?",
   "Claim Document": "Beleg",
-  "Other Document": "anderes Dokument",
+  "Other Document": "sonstiges Dokument",
   "Press for explanation": "Drücke für Erklärung",
-  "Is the document you are about to scan from Germany": "Ist das Dokument, das Sie gerade scannen, aus Deutschland?",
+  "Is the bill/receipt from Germany": "Handelt es sich um einen Beleg aus Deutschland",
   "Yes": "Ja",
   "No": "Nein",
   "Should contractual services": "Sollen vertragliche Leistungen an den Rechnungssteller (Arzt/Krankenhaus etc.) erstattet werden?",
   "Please enter the full name of the account holder": "Bitte geben Sie den vollständigen Namen des Kontoinhabers ein",
   "Full Name": "Vollständiger Name",
-  "Please enter your": "Bitte geben Sie Ihre",
+  "Please enter your IBAN": "Bitte geben Sie die IBAN an",
+  "Please enter your BIC": "Bitte geben Sie die BIC an",
   "Please make sure all fields have been selected": "Bitte stellen Sie sicher, dass alle Felder ausgewählt wurden",
   "please check your bank details": "Bitte überprüfen Sie Ihre Bankverbindung",
   "Please enter a birth date": "Bitte geben Sie ein Geburtsdatum ein",
@@ -47,16 +48,17 @@
 
   "Go Back": "Zurückgehen",
   "Finished submitting claim": "Fertig mit dem Einreichen des Anspruchs",
- "Select policy holder's sex":"Wählen Sie das Geschlecht des Versicherungsnehmers",
  "Scan Document":"Dokument scannen",
  "Please wait while we send your claim":"Bitte warten Sie, während wir Ihren Antrag abschicken...",
  "Language":"Sprache",
  "Set language" : "Sprache einstellen",
  "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein",
  "Press these": "Durch Drücken auf das Symbol",
- "icons for instructions": "Icons für Anweisungen",
+ "icons for instructions": "erhalten Sie weitere Informationen",
  "Start": "Start",
  "Imprint":"Impressum",
  "Privacy": "Datenschutz",
- "Please enter the information of the policy holder below": "Bitte geben Sie die Informationen des Versicherungsnehmers unten ein"
+ "Please enter the information of the policy holder below": "Bitte geben Sie uns folgende Informationen zum Versicherungsnehmer/Vertragsinhaber",
+ "The contractual services shall be reimbursed to the following account":"Die vertraglichen Leistungen sollen auf folgendes Konto erstattet werden:",
+ "Thank you for uploading the  documents. We will contact you shortly": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden."
 }
