--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -2,13 +2,13 @@
   "Insurance Number": "Insurance Number",
   "Please select your sex": "Please select your sex",
   "Select": "Select...",
-  "Male": "Male",
-  "Female": "Female",
+  "Mr": "Mr",
+  "Ms": "Ms",
   "First Name": "First Name",
   "Last name": "Last name",
   "Continue": "Continue...",
   "Please check your insurance number": "Please check your insurance number",
-  "Please select your gender": "Please select your gender",
+  "Salutation": "Salutation",
   "Please enter your name": "Please enter your name",
 
   "Scan Document": "Scan Document",
@@ -19,16 +19,17 @@
   "Press here for instructions": "Press here for instructions",
   "Please enter the birthdate of the insured person": "Please enter the birthdate of the insured person:",
   "Which type of document are you about to scan": "Which type of document are you about to scan?",
-  "Claim Document": "Claim Document",
+  "Claim Document": "Bill/Receipt",
   "Other Document": "Other Document",
   "Press for explanation": "Press for explanation",
   "Yes": "Yes",
   "No": "No",
-  "Is the document you are about to scan from Germany": "Is the document you are about to scan from Germany?",
+  "Is the bill/receipt from Germany": "Is the bill/receipt from Germany?",
   "Should contractual services": "Should contractual services be reimbursed to the biller (physician/hospital, etc.)?",
-  "Please enter the full name of the account holder": "Please enter the full name of the account holder",
+  "Please enter the name of the account holder": "Please enter the full name of the account holder",
   "Full Name": "Full Name",
-  "Please enter your": "Please enter your",
+  "Please enter your IBAN":"Please enter the IBAN",
+  "Please enter your BIC":"Please enter the BIC",
   "Please make sure all fields have been selected": "Please make sure all fields have been selected",
   "please check your bank details": "please check your bank details",
   "Please enter a birth date": "Please enter a birth date",
@@ -59,6 +60,8 @@
   "Start":"Start",
   "Imprint":"Imprint",
   "Privacy":"Privacy",
-  "Please enter the information of the policy holder below":"Please enter the information of the policy holder below"
+  "Please enter the information of the policy holder below":"Please enter the information of the policy holder below",
+  "The contractual services shall be reimbursed to the following account": "The contractual services shall be reimbursed to the following account: ",
+  "Thank you for uploading the  documents. We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly"
 
 }
