--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -62,6 +62,6 @@
   "Privacy":"Privacy",
   "Please enter the information of the policy holder below":"Please enter the information of the policy holder below",
   "The contractual services shall be reimbursed to the following account": "The contractual services shall be reimbursed to the following account: ",
-  "Thank you for uploading the  documents. We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly"
+  "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly"
 
 }
