added status bar fix for ios, added missing link

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -60,7 +60,7 @@
  "Privacy": "Datenschutz",
  "Please enter the information of the policy holder below": "Bitte geben Sie uns folgende Informationen zum Versicherungsnehmer/Vertragsinhaber",
  "The contractual services shall be reimbursed to the following account":"Die vertraglichen Leistungen sollen auf folgendes Konto erstattet werden:",
- "Thank you for uploading the documents We will contact you shortly": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden.",
+ "Thank you for uploading the documents We will contact you shortly": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden. \n Wichtiger: Bitte reichen Sie die Dokumente nicht noch einmal per Post oder E-Mail ein.",
  "could not access camera please grant permission manually": "konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis manuell",
  "Could not access camera please grant permission through phone settings": "Konnte nicht auf die Kamera zugreifen Bitte gewähren Sie die Erlaubnis über die Telefoneinstellungen"
 }
