--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -62,7 +62,7 @@
   "Privacy":"Privacy",
   "Please enter the information of the policy holder below":"Please enter the information of the policy holder below",
   "The contractual services shall be reimbursed to the following account": "The contractual services shall be reimbursed to the following account: ",
-  "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly",
+  "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly\n Important: Please do not resubmit the documents by mail or e-mail.",
   "could not access camera please grant permission manually":"could not access camera, please grant permission manually",
   "Could not access camera please grant permission through phone settings": "Could not access camera please grant permission through phone settings"
 
