--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -31,6 +31,7 @@
   "Please enter your BIC": "Bitte geben Sie die BIC an",
   "Please make sure all fields have been selected": "Bitte stellen Sie sicher, dass alle Felder ausgewählt wurden",
   "please check your bank details": "Bitte überprüfen Sie Ihre Bankverbindung",
+  "Please enter your salutation":"Bitte überprüfen Sie Ihre anrede",
   "Please enter a birth date": "Bitte geben Sie ein Geburtsdatum ein",
   "If you have a claim and would like to send us any relevant documents such as doctor's bills or pharmacy receipts": "Sie haben einen Schadenfall und möchten nun Belege, beispielsweise Arztrechnungen oder Apothekenquittungen, bei uns einreichen? Oder wir haben Sie im Zusammenhang mit einem Erstattungsantrag um Auskünfte gebeten (beispielsweise Selbstauskünfte oder Einreisenachweise). Diese Dokumente können Sie hier schnell und bequem hochladen. Ihr Vorteil: Sie brauchen uns nichts per Post oder E-Mail zu schicken und Sie erhalten sehr schnell die vertraglichen Leistungen.Im Einzelfall behalten wir uns vor, die Originale anzufordern.",
   "Doc-type info": "Belege,\ndas sind z.B. Arztrechnungen, Apothekenquittungen, Krankenhausrechnungen \n\nSonstige Dokumente, \ndas sind z.B. Selbstauskünfte, Schweigepflichtentbindungen, Kostenvoranschläge, Einreisenachweise",
