--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -64,6 +64,6 @@
   "The contractual services shall be reimbursed to the following account": "The contractual services shall be reimbursed to the following account: ",
   "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly\n Important: Please do not resubmit the documents by mail or e-mail.",
   "could not access camera please grant permission manually":"could not access camera, please grant permission manually",
-  "Could not access camera please grant permission through phone settings": "Could not access camera please grant permission through phone settings"
-
+  "Could not access camera please grant permission through phone settings": "Could not access camera please grant permission through phone settings",
+  "Please enter your salutation":"Please enter your salutation"
 }
