fixed missing translation (anrede)

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -62,5 +62,7 @@
  "The contractual services shall be reimbursed to the following account":"Die vertraglichen Leistungen sollen auf folgendes Konto erstattet werden:",
  "Thank you for uploading the documents We will contact you shortly": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden. \n Wichtiger Hinweis: Bitte reichen Sie die Dokumente nicht noch einmal per Post oder E-Mail ein.",
  "could not access camera please grant permission manually": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis manuell",
- "Could not access camera please grant permission through phone settings": "Die App konnte nicht auf die Kamera zugreifen, bitte gewähren Sie die Erlaubnis über die Telefoneinstellungen"
+ "Could not access camera please grant permission through phone settings": "Die App konnte nicht auf die Kamera zugreifen, bitte gewähren Sie die Erlaubnis über die Telefoneinstellungen",
+ "Please enter your salutation":"Bitte geben Sie Ihre Anrede ein"
+
 }
