added text that appears on sumary screen in case no documents are present

--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -40,7 +40,7 @@
   "Scan timed out, please hold phone steady and try again": "Scan timed out, please hold phone steady and try again",
   "Please wait while your document is being scanned": "Please wait while your document is being scanned",
   "Add Page": "Add Page",
-  "Delete all Pages": "Delete all Pages",
+  "Delete all Pages": "Delete document",
 
   "Rescan": "Rescan",
   "Crop": "Crop",
