infoobj now updates state in document info screen. fixed checkfield bug where if you change doc type and fields are selected they are registered as unselected due to checking state

--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -65,5 +65,7 @@
   "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the  documents. We will contact you shortly\n Important: Please do not resubmit the documents by mail or e-mail.",
   "could not access camera please grant permission manually":"could not access camera, please grant permission manually",
   "Could not access camera please grant permission through phone settings": "Could not access camera please grant permission through phone settings",
-  "Please enter your salutation":"Please enter your salutation"
+  "Please enter your salutation":"Please enter your salutation",
+  "Show Document":"Show Document",
+  "Press the show document button below to view all the pages of your document":"Press the 'show document' button below to view all the pages of your document"
 }
