changed name of app, updated translation json files

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -1,43 +1,44 @@
 {
+
   "Insurance Number": "Versicherungsnummer",
   "Select": "Bitte wählen",
   "Mr": "Herr",
   "Ms": "Frau",
   "First Name": "Vorname",
   "Last name": "Nachname",
-  "Please check your insurance number": "Bitte überprüfen Sie Ihre Versicherungsnummer",
+  "Please check your insurance number": "Bitte überprüfen Sie Ihre Versicherungsnummer.",
   "Continue": "Weiter",
   "Salutation": "Anrede",
-  "Please enter your name": "Bitte geben Sie den Namen ein",
+  "Please enter your name": "Bitte geben Sie den Namen ein.",
 
   "Send": "Senden",
   "was entered incorrectly Please fix your entry and try again": "wurde falsch eingegeben. Bitte korrigieren Sie Ihre Eingabe und versuchen Sie es erneut",
   "Something went wrong sending claim Please try again": "Beim Senden des Dokuments ist ein Problem aufgetreten. Bitte versuchen Sie es erneut.",
   "Cannot send anything before you scan some documents": "Sie können nichts senden, bevor Sie ein Dokument gescannt haben!",
 
-  "Press here for instructions": "Durch Drücken auf das Symbol (i) erhalten Sie weitere Informationen",
-  "Please enter the birthdate of the insured person": "Bitte geben Sie das Geburtsdatum der versicherten Person ein",
+  "Press here for instructions": "Berühren Sie das Symbol (i) und Sie erhalten weitere Informationen",
+  "Please enter the birthdate of the insured person": "Bitte geben Sie das Geburtsdatum der versicherten Person ein.",
   "Which type of document are you about to scan": "Welche Art von Dokument wollen Sie scannen?",
   "Claim Document": "Beleg",
   "Other Document": "Sonstiges Dokument",
-  "Press for explanation": "Durch Drücken auf das Symbol erhalten Sie weitere Informationen",
-  "Is the bill/receipt from Germany": "Handelt es sich um einen Beleg aus Deutschland",
+  "Press for explanation": "Durch Berühren des Symbols erhalten Sie weitere Informationen",
+  "Is the bill/receipt from Germany": "Handelt es sich um einen Beleg aus Deutschland?",
   "Yes": "Ja",
   "No": "Nein",
   "Should contractual services": "Sollen vertragliche Leistungen an den Rechnungssteller (Arzt/Krankenhaus etc.) erstattet werden?",
-  "Please enter the full name of the account holder": "Bitte geben Sie den vollständigen Namen des Kontoinhabers ein",
+  "Please enter the full name of the account holder": "Bitte geben Sie den vollständigen Namen des Kontoinhabers ein.",
   "Full Name": "Name Kontoinhaber",
-  "Please enter your IBAN": "Bitte geben Sie die IBAN an",
-  "Please enter your BIC": "Bitte geben Sie die BIC an",
-  "Please make sure all fields have been selected": "Bitte stellen Sie sicher, dass alle Felder ausgewählt wurden",
-  "please check your bank details": "Bitte überprüfen Sie Ihre Bankverbindung",
-  "Please enter a birth date": "Bitte geben Sie ein Geburtsdatum ein",
+  "Please enter your IBAN": "Bitte geben Sie die IBAN an.",
+  "Please enter your BIC": "Bitte geben Sie die BIC an.",
+  "Please make sure all fields have been selected": "Bitte stellen Sie sicher, dass alle Felder ausgewählt wurden.",
+  "please check your bank details": "Bitte überprüfen Sie Ihre Bankverbindung.",
+  "Please enter a birth date": "Bitte geben Sie ein Geburtsdatum ein.",
   "If you have a claim and would like to send us any relevant documents such as doctor's bills or pharmacy receipts": "Sie haben einen Schadenfall und möchten nun Belege, beispielsweise Arztrechnungen oder Apothekenquittungen, bei uns einreichen? Oder wir haben Sie im Zusammenhang mit einem Erstattungsantrag um Auskünfte gebeten (beispielsweise Selbstauskünfte oder Einreisenachweise). Diese Dokumente können Sie hier schnell und bequem hochladen. Ihr Vorteil: Sie brauchen uns nichts per Post oder E-Mail zu schicken und Sie erhalten sehr schnell die vertraglichen Leistungen.Im Einzelfall behalten wir uns vor, die Originale anzufordern.",
-  "Doc-type info": "Belege,\ndas sind z.B. Arztrechnungen, Apothekenquittungen, Krankenhausrechnungen \n\nSonstige Dokumente, \ndas sind z.B. Selbstauskünfte, Schweigepflichtentbindungen, Kostenvoranschläge, Einreisenachweise",
-  "Please wait while your document is being scanned": "Bitte warten Sie, während Ihr Dokument gescannt wird",
+  "Doc-type info": "Belege,\ndas sind z.B. Arztrechnungen, Apothekenquittungen, Krankenhausrechnungen \n\nSonstige Dokumente,\ndas sind z.B. Selbstauskünfte, Schweigepflichtentbindungen, Kostenvoranschläge, Einreisenachweise",
+  "Please wait while your document is being scanned": "Bitte warten Sie, während Ihr Dokument gescannt wird.",
 
   "Scan": "Scannen",
-  "Scan timed out, please hold phone steady and try again": "Der Scanvorgang wurde abgebrochen, bitte halten Sie das Telefon ruhig und versuchen Sie es erneut",
+  "Scan timed out, please hold phone steady and try again": "Der Scanvorgang wurde abgebrochen, bitte halten Sie das Telefon ruhig und versuchen Sie es erneut.",
   "Crop": "Zuschneiden",
   "Rescan": "Neu scannen",
   "Add Page": "Seite hinzufügen",
@@ -46,25 +47,25 @@
   "with": "mit",
   "pages": "Seite/n",
 
-  "Go Back": "Zurückgehen",
-  "Finished submitting claim": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden.\nWichtiger Hinweis: Bitte reichen Sie die Dokumente nicht noch einmal per Post oder E-Mail ein.",
+  "Go Back": "Zurück",
+  "Finished submitting claim": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden.\n\nWichtiger Hinweis: Bitte reichen Sie die Dokumente nicht noch einmal per Post oder E-Mail ein.",
  "Scan Document":"Dokument scannen",
- "Please wait while we send your claim":"Bitte warten Sie, während wir Ihren Antrag abschicken...",
+ "Please wait while we send your claim":"Bitte warten Sie, während wir Ihre Dokumente versenden. Dies kann je nach Anzahl und Größe der Dokumente etwas dauern.",
  "Language":"Sprache",
  "Set language" : "Sprache einstellen",
- "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein",
- "Press these": "Durch Drücken auf das Symbol",
+ "Please enter a valid birth date": "Bitte geben Sie ein gültiges Geburtsdatum ein.",
+ "Press these": "Durch Berühren des Symbols",
  "icons for instructions": "erhalten Sie weitere Informationen",
  "Start": "Start",
  "Imprint":"Impressum",
  "Privacy": "Datenschutz",
- "Please enter the information of the policy holder below": "Bitte geben Sie uns folgende Informationen zum Versicherungsnehmer/Vertragsinhaber",
+ "Please enter the information of the policy holder below": "Bitte geben Sie uns folgende Informationen zum Versicherungsnehmer/Vertragsinhaber.",
  "The contractual services shall be reimbursed to the following account":"Die vertraglichen Leistungen sollen auf folgendes Konto erstattet werden:",
- "Thank you for uploading the documents We will contact you shortly": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden. \n Wichtiger Hinweis: Bitte reichen Sie die Dokumente nicht noch einmal per Post oder E-Mail ein.",
- "could not access camera please grant permission manually": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis manuell",
- "Could not access camera please grant permission through phone settings": "Die App konnte nicht auf die Kamera zugreifen, bitte gewähren Sie die Erlaubnis über die Telefoneinstellungen",
- "Please enter your salutation":"Bitte geben Sie Ihre Anrede ein",
+ "Thank you for uploading the documents We will contact you shortly": "Vielen Dank für den Upload der Dokumente. Wir werden uns zeitnah bei Ihnen melden. \n\nWichtiger Hinweis: Bitte reichen Sie die Dokumente nicht noch einmal per Post oder E-Mail ein.",
+ "could not access camera please grant permission manually": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis manuell.",
+ "Could not access camera please grant permission through phone settings": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis über die Telefoneinstellungen.",
 
+  "Please enter your salutation":"Please enter your salutation.",
  "You can start scanning documents by pressing the scan document button below": "Sie können das Scannen von Dokumenten starten, indem Sie auf die Schaltfläche Dokument scannen unten drücken", 
  "Press the show document button below to view all the pages of your document": "Drücken Sie die Schaltfläche Dokument anzeigen unten, um alle Seiten Ihres Dokuments anzuzeigen",
  "Show Document": "Dokument anzeigen",
