got rid of Alert heder

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -65,7 +65,7 @@
  "could not access camera please grant permission manually": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis manuell.",
  "Could not access camera please grant permission through phone settings": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis über die Telefoneinstellungen.",
 
-  "Please enter your salutation":"Please enter your salutation.",
+  "Please enter your salutation":"Bitte wählen Sie die Anrede aus.",
  "You can start scanning documents by pressing the scan document button below": "Sie können das Scannen von Dokumenten starten, indem Sie auf die Schaltfläche Dokument scannen unten drücken", 
  "Press the show document button below to view all the pages of your document": "Drücken Sie die Schaltfläche Dokument anzeigen unten, um alle Seiten Ihres Dokuments anzuzeigen",
  "Show Document": "Dokument anzeigen",
