--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -65,7 +65,7 @@
   "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the documents. We will contact you shortly\n Important: Please do not send the documents again via email or regular mail.",
   "could not access camera please grant permission manually":"The camera could not be accessed. Please grant permission manually.",
   "Could not access camera please grant permission through phone settings": "The camera could not be accessed. Please grant permission through phone settings.",
-  "Please enter your salutation":"Please enter your salutation.",
+  "Please enter your salutation":"Please enter the salutation.",
 
   "Show Document":"Show Document",
   "Press the show document button below to view all the pages of your document":"Press the 'show document' button below to view all the pages of your document",
