added video instruction tab to start screen

--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -71,7 +71,7 @@
   "Press the show document button below to view all the pages of your document":"Press the 'show document' button below to view all the pages of your document",
   "You can start scanning documents by pressing the scan document button below": "You can start scanning documents by pressing the Scan Document button below",
   "You can view and edit the document by pressing here":"\n(view and edit the document by pressing here)",
-  "Here you can edit the information you put in and view the pages of the document by pressing the Show Document button": "Here you can edit the document's information and view the pages of the document by pressing the Show Document button"
-  
+  "Here you can edit the information you put in and view the pages of the document by pressing the Show Document button": "Here you can edit the document's information and view the pages of the document by pressing the Show Document button",
+  "How to video": "How to"
 
 }
