--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -70,6 +70,7 @@
  "Press the show document button below to view all the pages of your document": "Drücken Sie die Schaltfläche Dokument anzeigen unten, um alle Seiten Ihres Dokuments anzuzeigen",
  "Show Document": "Dokument anzeigen",
  "You can view and edit the document by pressing here":"\nZur Anzeige und Bearbeitung des Dokuments klicken Sie bitte hier.",
- "Here you can edit the information you put in and view the pages of the document by pressing the Show Document button":"Hier können Sie die Informationen zum Dokument ändern und die einzelnen Seiten des Dokuments aufrufen durch Klick auf Dokument anzeigen"
+ "Here you can edit the information you put in and view the pages of the document by pressing the Show Document button":"Hier können Sie die Informationen zum Dokument ändern und die einzelnen Seiten des Dokuments aufrufen durch Klick auf Dokument anzeigen",
+ "How to video": "Erklärvideo"
 
 }
